--- a/module_2/docker-compose.yml
+++ b/module_2/docker-compose.yml
@@ -18,7 +18,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 10
-
   kestra:
     image: kestra/kestra:latest
     pull_policy: always
@@ -70,4 +69,4 @@ services:
       - "8085:80"
     depends_on:
       postgres:
-        condition: service_healthy
+        condition: service_started
